unpackaged/objects/REC_Form_Submitted__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>REC Form Submitted</relationshipLabel>
        <relationshipName>REC_Form_Submitted</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>REC Form Submitted</relationshipLabel>
        <relationshipName>REC_Form_Submitted</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Head_of_Study__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of Study</label>
        <lookupFilter>
            <active>false</active>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>REC_Form_Submitted1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Case__r.Approval_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <lookupFilter>
            <active>false</active>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>REC_Form_Submitted</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>REC Form Submitted</label>
    <nameField>
        <displayFormat>RI-{0000000000}</displayFormat>
        <label>REC ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>REC Form Submitted</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>